...
            WritingWorkNewDemo -> "New work"
            WritingWorkDraftDemo -> "Draft"
            WritingWorkPostedDemo -> "Edit work"
            WritingChapterNewDraftDemo -> "Add chapter"
            WritingChapterDraftDemo -> "Edit chapter"
            WritingEditorDemo, WritingEditorFixture -> "Chapter text"
            AO3CollectionItems -> "Collection items"
            AO3ChallengeSettings -> "Challenge"
            AO3ChallengeAssignments -> "Assignments"
            AO3ChallengeSignUps -> "Sign-ups"
            AO3ChallengeSignUp -> "Your sign-up"
            AO3PromptMeme -> "Prompts"
            AO3TagSet -> "Tag set"
...
